--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </li>
           </ul>
         </div>
-        <script src="index.pack.js"></script>
+        <script src="index.js"></script>
   </body>
 
 </html>
