--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <span id="width" class="width-container"></span>
     <nav id="nav">
       <div class="inner-wrapper">
         <svg viewBox="0 0 32 37" id="exit-btn">
@@ -44,22 +45,22 @@
       <section class="panel">
         <ul class="data">
           <li>
-            <h3>Quarterly</h3>
-            <p>$5,201.00</p>
+            <h3>Monthly</h3>
+            <p>$1,201.00</p>
           </li>
           <li>
             <h3>Quarterly</h3>
-            <p>$5,201.00</p>
+            <p>$5,737.60</p>
           </li>
           <li>
-            <h3>Quarterly</h3>
-            <p>$5,201.00</p>
+            <h3>Annually</h3>
+            <p>$30,261.10</p>
           </li>
         </ul>
       </section>
+
       <div class="columns half">
         <div class="col left">
-
           <h3>Monthly Visitors</h3>
 
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
@@ -69,16 +70,16 @@
         <div class="col">
           <ul class="data secondary">
             <li>
-              <h3>Quarterly</h3>
-              <p>$5,201.00</p>
+              <h3>Monthly</h3>
+              <p>$1,201.00</p>
             </li>
             <li>
               <h3>Quarterly</h3>
-              <p>$5,201.00</p>
+              <p>$5,737.60</p>
             </li>
             <li>
-              <h3>Quarterly</h3>
-              <p>$5,201.00</p>
+              <h3>Annually</h3>
+              <p>$30,261.10</p>
             </li>
             <li>
               <h3>Quarterly</h3>
@@ -86,7 +87,9 @@
             </li>
           </ul>
         </div>
-        <script src="index.js"></script>
+      </div>
+    </main>
+    <script src="index.js"></script>
   </body>
 
 </html>
